# nam-clap

./: .gitignore  .gitmodules  CMakeLists.txt  DistrhoPluginInfo.h  Makefile  NAMEngine.cpp  NAMEngine.hpp  NAMPlugin.cpp  NAMPlugin.hpp  NAMPluginUI.cpp  README.md  flake.nix
plugins/nam/: DistrhoPluginInfo.h  Makefile  NAMEngine.cpp  NAMEngine.hpp  NAMPlugin.cpp  NAMPlugin.hpp
src/: CMakeLists.txt  dsp.cpp  dsp.h  main.cpp  plugin.cpp  plugin.h  visibility.h
